# pico2_automotive_firmware

./: .clang-format  .gitignore  .pre-commit-config.yaml  30天計畫.md  CMakeLists.txt  CMakePresets.json  CONTEXT.md  Dockerfile  docker-compose.yml  pico_sdk_import.cmake
.github/workflows/: main.yml
build_test/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_blink
scripts/: run_tests.sh
src/: CMakeLists.txt  main.c
src/ON/picotool-build/: CMakeCache.txt  Makefile  cmake_install.cmake  data_locs.cpp  install_manifest.txt  picotool
src/ON/picotool-build/bintool/: Makefile  cmake_install.cmake
src/ON/picotool-build/boot_bootrom_headers/: Makefile  cmake_install.cmake
src/ON/picotool-build/boot_picobin_headers/: Makefile  cmake_install.cmake
src/ON/picotool-build/boot_picoboot_headers/: Makefile  cmake_install.cmake
src/ON/picotool-build/boot_uf2_headers/: Makefile  cmake_install.cmake
src/ON/picotool-build/elf/: Makefile  cmake_install.cmake
src/ON/picotool-build/elf2uf2/: Makefile  cmake_install.cmake
src/ON/picotool-build/enc_bootloader/: CMakeCache.txt  Makefile  cmake_install.cmake
src/ON/picotool-build/enc_bootloader/tmp/: enc_bootloader-cfgcmd.txt
src/ON/picotool-build/enc_bootloader_mbedtls/: CMakeCache.txt  Makefile  cmake_install.cmake
src/ON/picotool-build/enc_bootloader_mbedtls/tmp/: enc_bootloader_mbedtls-cfgcmd.txt
src/ON/picotool-build/errors/: Makefile  cmake_install.cmake
src/ON/picotool-build/lib/: Makefile  cmake_install.cmake
src/ON/picotool-build/lib/nlohmann_json/: Makefile  cmake_install.cmake
src/ON/picotool-build/lib/whereami/: Makefile  cmake_install.cmake
src/ON/picotool-build/pico_binary_info/: Makefile  cmake_install.cmake
src/ON/picotool-build/pico_platform/: Makefile  cmake_install.cmake
src/ON/picotool-build/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
src/ON/picotool-build/picoboot_connection/: Makefile  cmake_install.cmake
src/ON/picotool-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
src/ON/picotool-subbuild/picotool-populate-prefix/tmp/: picotool-populate-gitclone.cmake  picotool-populate-gitupdate.cmake
src/app/: CMakeLists.txt  app_blink.c  app_blink.h  app_display.c  app_display.h  app_storage.c  app_storage.h
src/common/: CMakeLists.txt  common_ringbuffer.c  common_ringbuffer.h  common_status.h  common_types.h
src/hal/: CMakeLists.txt  hal_delay.c  hal_delay.h  hal_dma.c  hal_dma.h  hal_gpio.c  hal_gpio.h  hal_i2c.c  hal_i2c.h  hal_init.c  hal_init.h  hal_led.c  hal_led.h  hal_multicore.c  hal_multicore.h  hal_storage.c  hal_storage.h
test/: CMakeLists.txt  mock_hal_gpio.c  test_app_display.c  test_blink.c  test_gpio_callback.c
test/mock/hardware/: gpio.h  i2c.h
test/mock/pico/: stdlib.h
